k8s/deployment-canary.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: dotnet-webapp-canary

spec:
  replicas: 1

  selector:
    matchLabels:
      app: dotnet-webapp
      version: canary

  template:

    metadata:
      labels:
        app: dotnet-webapp
        version: canary

    spec:

      containers:

      - name: k8s-dotnet-lab

        image: ghcr.io/adamovick/k8s-dotnet-lab:v10

        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10

        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
