k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: kral-db

spec:
  serviceName: kral-db

  replicas: 3

  selector:
    matchLabels:
      app: kral-db

  template:

    metadata:
      labels:
        app: kral-db

    spec:

      containers:

      - name: db

        image: busybox

        command:
          - sleep
          - "999999"

        volumeMounts:

        - name: data

          mountPath: /data

  volumeClaimTemplates:

  - metadata:
      name: data

    spec:

      accessModes:
        - ReadWriteOnce

      resources:
        requests:
          storage: 1Gi
