k8s/service-canary.yaml
apiVersion: v1
kind: Service

metadata:
  name: dotnet-webapp-canary

spec:
  selector:
    app: dotnet-webapp
    version: canary

  ports:

  - port: 80
    targetPort: 8080

  type: ClusterIP
