k8s/service-stateful.yaml
apiVersion: v1
kind: Service

metadata:
  name: kral-db

spec:
  clusterIP: None

  selector:
    app: kral-db

  ports:

  - port: 80
    targetPort: 80
